# db-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: auth.rs  error.rs  main.rs
src/db/: database_pool.rs  executor.rs  mod.rs  pool.rs  schema.rs  transaction_registry.rs  types.rs
src/mcp/: service.rs
src/models/: connection.rs  query.rs
src/tools/: connection.rs  explain.rs  format.rs  guard.rs  mod.rs  query.rs  schema.rs  sql_validator.rs  transaction.rs  write.rs
src/transport/: http.rs
tests/: clickhouse_syntax_test.rs  clickhouse_test.rs  connection_management_test.rs  explain_test.rs  fuzz_test.rs  fuzz_with_db_test.rs
