[package]
name = "db-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for database operations - enables AI assistants to query SQL databases"
license = "MIT"
repository = "https://github.com/example/db-mcp-server"
keywords = ["mcp", "database", "sqlite", "postgresql", "mysql"]
categories = ["database", "command-line-utilities"]

[dependencies]
rmcp = { version = "0.16.0", features = [
    "transport-io",
    "transport-streamable-http-server",
] }
axum = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "any",
    "json",
    "chrono",
] }
clickhouse = { version = "0.14", features = ["lz4", "inserter"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "net",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
humansize = "2"
schemars = { version = "1.2", features = ["derive"] }
futures-util = "0.3.32"
unicode-width = "0.2.2"
sqlparser = "0.61"
regex = "1"
subtle = "2.6"
bytes = "1"
tower = { version = "0.5", default-features = false, features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rand = "0.10"

[[bin]]
name = "db-mcp-server"
path = "src/main.rs"

[lib]
name = "db_mcp_server"
path = "src/lib.rs"
